--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       text-align: left;
       color: navy;
       font-weight: 400;
+      font: calibri;
     }
     table.socs_day_events td {
       padding: 4px;
